src/components/FriendProfile/FriendProfile.scss
@import '../../App.scss';

#friendProfile {
    height: 100vh;
    width: 100vw;
    @include flexCenter(column);
    position: absolute;
    top: 0;
    left: 0;
    z-index: 5;
    font-family: $content-font;

    @media screen and (max-width: $break-tablet) {
        align-items: flex-end;
    }

    #friendProfileContainer {
        position: relative;
        padding: 30px;
        padding-top: 0;
        width: 80%;
        height: 80%;
        background-color: #fff;
        overflow-y: auto;
        opacity: .9;
        z-index: 10;
        border-radius: 3px;
        box-shadow: 0px 0px 4px 4px #b9b9b9;
        @include flexCenter(column);
        justify-content: flex-start;

        @media screen and (max-width: $break-tablet) {
            width: 77%;
            height: 80%;
            padding: 10px;
        }

        &>i {
            position: absolute;
            top: 15px;
            left: 15px;

            @media screen and (max-width: $break-tablet) {
                top: 7px;
                left: 7px;
            }
        }

        #friendProfileTitle {
            @include flexSpaceAround(column);
            // justify-content: flex-start;
            min-height: 100%;
            width: 80%;
            // height: 80vh;
            // min-height: fit-content;

            @media screen and (max-width: $break-tablet) {
                width: 100%;
            }

            #friendProfilePic {
                @include flexCenter(row);
                height: 20vw;
                min-height: 175px;
                width: 20vw;
                min-width: 175px;
                border-radius: 50%;
                // margin-top: 30px;

                img {
                    height: 90%;
                    width: 90%;
                    border-radius: 50%;
                }

            }

            #friendProfileContent {
                height: fit-content;
                min-height: 50%;
                width: 50%;
                min-width: 220px;
                @include flexSpaceAround(column);
                justify-content: flex-start;

                @media screen and (max-width: $break-tablet) {
                    min-height: 50%;
                }

                // overflow-y: auto;
                #colorPicker {
                    margin: 15px 0;
                }

                h1 {
                    font-size: 3.5em;
                    color: $brand-color-dark;

                    @media screen and (max-width: $break-tablet) {
                        font-size: 2.2em;
                    }
                }

                h3 {
                    font-size: 2.5em;
                    color: $brand-color;

                    @media screen and (max-width: $break-tablet) {
                        font-size: 1.7em;
                        margin-bottom: 5px;
                    }
                }

                h4 {
                    font-size: 1.5em;
                    color: $accent-color;
                    margin-bottom: 20px;

                    @media screen and (max-width: $break-tablet) {
                        font-size: 1em;
                        margin-bottom: 10px;
                    }
                }

                button {
                    border: 1px solid $brand-color;
                    border-radius: 2px;
                    min-height: 40px;
                    width: 100%;
                    font-size: 1em;
                    background-color: rgba(255, 255, 255, 0.1);
                    color: $brand-color-dark;
                    margin-bottom: 10px;

                    @media screen and (max-width: $break-tablet) {
                        font-size: .9em;
                        min-height: 35px;
                    }
                }

                .visitedList {
                    background-color: $brand-color-dark;
                    color: $white-color;
                }

            }

        }

        #friendProfileInfo {
            @include flexSpaceAround(column);
            // justify-content: space-between;
            height: fit-content;
            width: 80%;
            // margin-top: 40px;

            @media screen and (max-width: $break-tablet) {
                width: 80%;
            }

            #friendProfilePost {
                width: 100%;
            }

            #profileImages {
                width: 100%;
                // height: fit-content;
                display: flex;
                flex-wrap: wrap;
                justify-content: space-around;
                // object-fit: auto;

                img {
                    max-height: 175px;
                    flex: 1;
                    width: auto;
                    height: auto;
                    object-fit: cover;

                    @media screen and (max-width: $break-tablet) {
                        max-height: 100%;
                        height: auto;
                        width: 90%;
                        object-fit: contain;
                    }
                }
            }
        }
    }
}

